Interaction of CSS clip and transform broke in branch 66
Categories
(Core :: Layout, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox65 | --- | unaffected |
| firefox66 | + | verified |
| firefox67 | --- | verified |
People
(Reporter: johanringmann, Assigned: emilio)
References
(Blocks 1 open bug)
Details
(Keywords: regression, Whiteboard: [wptsync upstream])
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:65.0) Gecko/20100101 Firefox/65.0
Steps to reproduce:
- Apply a rotation transform to an element
- Apply a
clipto the element
or see JSFiddle: https://jsfiddle.net/21mp8ec9/
Actual results:
In branch 66, the clip is applied after the transform.
In branch 65, the clip is applied before the transform, just like it is with clip-path.
Expected results:
The clip should be applied before the transform.
This is what happens in Chromium 72, and Firefox 65.
Updated•7 years ago
|
Comment 1•7 years ago
|
||
Regression window:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=717a8fb8b842276af0a62b021ac3cf42833659ca&tochange=0026b863c4371ed9856e27b31fb1a61d7ce1e42b
Regressed by: Bug 1514384
| Assignee | ||
Updated•7 years ago
|
| Assignee | ||
Comment 2•7 years ago
|
||
I think this is the less complex way to get the desired behavior here... The
extra AutoSaveRestore is needed to handle the clipped + transformed + fixed
case, I added a test for that too.
| Assignee | ||
Comment 3•7 years ago
|
||
[Tracking Requested - why for this release]: Regression that would be nice not to ship.
Comment 5•7 years ago
|
||
Tracking to keep an eye on this - once it lands on m-c please request uplift.
Updated•7 years ago
|
| Assignee | ||
Comment 7•7 years ago
|
||
Comment on attachment 9041164 [details]
Bug 1524966 - Apply CSS clip inside the transform rather than outside.
Beta/Release Uplift Approval Request
Feature/Bug causing the regression
User impact if declined
Wrongly clipped elements, see this bug and duplicate.
Is this code covered by automated tests?
Yes
Has the fix been verified in Nightly?
No
Needs manual test from QE?
Yes
If yes, steps to reproduce
See comment 0.
List of other uplifts needed
None
Risk to taking this patch
Medium
Why is the change risky/not risky? (and alternatives if risky)
Changing a (relatively) well tested and isolated part of the code-base to restore previous behavior in this case.
String changes made/needed
none
Updated•7 years ago
|
Comment 9•7 years ago
|
||
| bugherder | ||
Comment 10•7 years ago
|
||
Confirmed the issue with 66.0b4, 67.0a1 (2019-02-04) on Windows 10x64.
Fix verified with 67.0a1 (2019-02-06) on Windows 10, macOS 10.13, Ubuntu 16.04.
Comment 11•7 years ago
|
||
Comment on attachment 9041164 [details]
Bug 1524966 - Apply CSS clip inside the transform rather than outside.
[Triage Comment]
Fixes some instances of wrongly-clipped elements. Approved for 66.0b6.
Comment 12•7 years ago
|
||
| bugherder uplift | ||
Updated•7 years ago
|
Comment 13•7 years ago
|
||
Verified fix with 66.0b13 on the same OSs mentioned above.
Description
•