Bug 1524966 - Apply CSS clip inside the transform rather than outside. r=mstange, a=RyanVM

I think this is the less complex way to get the desired behavior here... The
extra AutoSaveRestore is needed to handle the clipped + transformed + fixed
case, I added a test for that too.

Differential Revision: https://phabricator.services.mozilla.com/D18555

--HG--
rename : testing/web-platform/tests/css/css-masking/clip/clip-filter-order.html => testing/web-platform/tests/css/css-masking/clip/clip-transform-order.html
extra : source : 742718306d3f4da369fe1ef3f926a0dd25a92dd5
extra : histedit_source : a691f0a8a7d2a98579fe84811537f4c26b1d49b4